--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="text"></div>
+        <div id="text">Text</div>
         <div id="option-buttons" class="btn-grid">
             <button class="btn">Option 1</button>
             <button class="btn">Option 2</button>
