--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Die Hard 2</title>
     <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="header">DIE HARDER.</div>
     <div class="container">
         <div id="text">Text</div>
         <div id="option-buttons" class="btn-grid">
