--- a/index.html
+++ b/index.html
@@ -6,19 +6,51 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Die Hard 2</title>
+    <!--    bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!--Css-->
     <link href="css/styles.css" rel="stylesheet">
+    <!--    Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">DIE HARDER.</div>
-    <div class="container">
+<div class="row">
+    <div class="header col-12">DIE HARDER.</div>
+</div>
+<div class="row">
+    <p>Image PlaceHolder</p>
+</div>
+<div class="row">
+    <div class="container col-12 d-flex justify-content-center">
         <div id="text">Text</div>
-        <div id="option-buttons" class="btn-grid">
-            <button class="btn">Option 1</button>
-            <button class="btn">Option 2</button>
-            <button class="btn">Option 3</button>
-            <button class="btn">Option 4</button>
-        </div>
     </div>
+</div>
+<div class="row">
+    <div id="option-buttons" class="d-flex justify-content-center">
+        <button class="btn col bg-light p-3 m-1 w-100">Option 1</button>
+        <button class="btn col bg-light p-3 m-1">Option 2</button>
+    </div>
+</div>
+<div class="row">
+    <div id="option-buttons2" class="d-flex justify-content-center">
+        <button class="btn col bg-light p-3 m-1">Option 3</button>
+        <button class="btn col bg-light p-3 m-1">Option 4</button>
+    </div>
+</div>
+
+
+<!--bootstrap scripts-->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+
+
 </body>
 </html>
