added image and image sizing params, extended button widths

--- a/index.html
+++ b/index.html
@@ -15,28 +15,33 @@
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="container d-flex flex-column justify-content-center">
 <div class="row">
-    <div class="header col-12">DIE HARDER.</div>
+    <div class="header d-flex justify-content-center col-12 mt-0 md-3">DIE HARDER.</div>
 </div>
 <div class="row">
-    <p>Image PlaceHolder</p>
+    <img src="img/badguy.jpeg" alt="img" class="">
 </div>
 <div class="row">
-    <div class="container col-12 d-flex justify-content-center">
+    <div class="container col-12 d-flex justify-content-center mt-3 md-3">
         <div id="text">Text</div>
     </div>
 </div>
 <div class="row">
-    <div id="option-buttons" class="d-flex justify-content-center">
+    <div id="option-buttons" class="d-flex justify-content-center w-100">
         <button class="btn col bg-light p-3 m-1 w-100">Option 1</button>
         <button class="btn col bg-light p-3 m-1">Option 2</button>
     </div>
 </div>
 <div class="row">
-    <div id="option-buttons2" class="d-flex justify-content-center">
+    <div id="option-buttons2" class="d-flex justify-content-center w-100">
         <button class="btn col bg-light p-3 m-1">Option 3</button>
         <button class="btn col bg-light p-3 m-1">Option 4</button>
     </div>
+</div>
+
+
+<!--Ending of main container...nothing below here-->
 </div>
 
 
