--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/styles.css" rel="stylesheet">
     <!--    Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
+    <script defer src="js/game.js"></script>
 </head>
 <body>
 <div class="container d-flex flex-column justify-content-center">
