alligned text box boundaries and button placement

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <div class="row">
     <img src="img/badguy.jpeg" alt="img" class="">
 </div>
-<div class="row">
-    <div class="container col-12 d-flex justify-content-center mt-3 md-3">
+<div class="row row-text">
+    <div class="container col-10 d-flex justify-content-center mt-3 md-3">
         <div id="text">Text</div>
     </div>
 </div>
