--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header d-flex justify-content-center col-12 mt-0 md-3">DIE HARDER.</div>
 </div>
 <div class="row">
-    <img src="img/badguy.jpeg" alt="img" class="">
+    <img src="img/dieharderbruce.jpg" alt="img" class="">
 </div>
 <div class="row row-text">
     <div class="container col-10 d-flex justify-content-center mt-3 md-3">
