Got images to load for each event.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!--Css-->
     <link href="css/styles.css" rel="stylesheet">
-    <!--    Google Fonts-->
+    <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
+    <!--JQuery-->
+    <script src="jquery-3.4.1.min.js"></script>
+    <!--Our Game-->
     <script defer src="js/game.js"></script>
 </head>
 <body>
@@ -21,7 +24,7 @@
     <div class="header d-flex justify-content-center col-12 mt-0 md-3">DIE HARDER.</div>
 </div>
 <div class="row">
-    <img src="img/dieharderbruce.jpg" alt="img" class="">
+    <img src="img/dieharderbruce.jpg" alt="img" id="event-image">
 </div>
 <div class="row row-text">
     <div class="container col-10 d-flex justify-content-center mt-3 md-3">
@@ -36,6 +39,7 @@
 
 <!--Ending of main container...nothing below here-->
 </div>
+
 
 
 <!--bootstrap scripts-->
