--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!--Css-->
     <link href="css/styles.css" rel="stylesheet">
-    <!--Google Fonts-->
+    <!--    Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
-    <!--JQuery-->
-    <script src="jquery-3.4.1.min.js"></script>
-    <!--Our Game-->
     <script defer src="js/game.js"></script>
 </head>
 <body>
@@ -24,10 +21,10 @@
     <div class="header d-flex justify-content-center col-12 mt-0 md-3">DIE HARDER.</div>
 </div>
 <div class="row">
-    <img src="img/dieharderbruce.jpg" alt="img" id="event-image">
+    <img src="img/badguy.jpeg" alt="img" class="">
 </div>
-<div class="row row-text">
-    <div class="container col-10 d-flex justify-content-center mt-3 md-3">
+<div class="row">
+    <div class="container col-12 d-flex justify-content-center mt-3 md-3">
         <div id="text">Text</div>
     </div>
 </div>
@@ -39,7 +36,6 @@
 
 <!--Ending of main container...nothing below here-->
 </div>
-
 
 
 <!--bootstrap scripts-->
