--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <link href="css/styles.css" rel="stylesheet">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Open+Sans&display=swap" rel="stylesheet">
-    <!--JQuery-->
-    <script src="jquery-3.4.1.min.js"></script>
-    <!--Our Game-->
-    <script defer src="js/game.js"></script>
 </head>
 <body>
 <div class="container d-flex flex-column justify-content-center">
@@ -40,8 +36,6 @@
 <!--Ending of main container...nothing below here-->
 </div>
 
-
-
 <!--bootstrap scripts-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -53,6 +47,10 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
 
+<!--JQuery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!--Our Game-->
+<script src="js/game.js"></script>
 
 </body>
 </html>
